# dteam-test

./: .gitignore  Dockerfile  README.md  celerybeat-schedule  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
CVProject/: celery.py  settings.py  urls.py
audit/: admin.py  middleware.py  models.py  tests.py  urls.py  views.py
audit/migrations/: 0001_initial.py
main/: context_processors.py  decorators.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
main/fixtures/: cv.json
main/migrations/: 0001_initial.py  0002_alter_cv_created_at_alter_cv_updated_at.py
main/templates/audit/: request_logs.html
main/templates/main/: cv_detail.html  cv_list.html  cv_pdf.html  settings.html
