[tool.poetry]
name = "cvproject"
version = "0.1.0"
description = "Dockerized Django project with PostgreSQL"
authors = ["Name <sergeyitaly@yahoo.com>"]
packages = [{ include = "CVProject" }]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.2.21"
asgiref = "3.8.1"
Brotli = "1.1.0"
cffi = "1.17.1"
cssselect2 = "0.8.0"
django-admin = "2.0.2"
django-excel-response2 = "3.0.6"
django-six = "1.0.5"
djangorestframework = "3.16.0"
dotenv = "0.9.9"
excel-base = "1.0.4"
fonttools = "4.58.1"
isoweek = "1.3.3"
pillow = "11.2.1"
pycparser = "2.22"
pydyf = "0.11.0"
pyphen = "0.17.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.0"
screen = "1.0.1"
six = "1.17.0"
sqlparse = "0.5.3"
TimeConvert = "3.0.13"
tinycss2 = "1.4.0"
tinyhtml5 = "2.0.0"
typing-extensions = "4.13.2"
tzlocal = "5.3.1"
weasyprint = "65.1"
webencodings = "0.5.1"
xlwt = "1.3.0"
zopfli = "0.2.3.post1"
psycopg2-binary = "^2.9"
dj-database-url = "^1.0"
gunicorn = "^21.2"
redis = "^5.0"
django-redis = "^5.4"
celery = "^5.3"

[tool.poetry.dev-dependencies]
# black = "^24.0.0"
# isort = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
